--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,9 +7,16 @@
     "webpack": "^5.77.0",
     "webpack-node-externals": "^3.0.0"
   },
+  "scripts": {
+    "dbAction": "node ./db/dbActions.js"
+  },
   "dependencies": {
+    "@aws-sdk/client-rds": "^3.310.0",
     "@babel/preset-env": "^7.21.4",
+    "aws-sdk": "^2.1356.0",
     "babel-plugin-source-map-support": "^2.2.0",
-    "source-map-support": "^0.5.21"
+    "dotenv": "^16.0.3",
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0"
   }
 }
