--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -6,6 +6,7 @@ service: product-service
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 frameworkVersion: '3'
+useDotenv: true
 
 provider:
   name: aws
@@ -13,6 +14,8 @@ provider:
   stage: dev1
   region: us-east-1
   profile: sandx
+  environment:
+    SQS_URL: ${env:SQS_URL}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -22,7 +25,12 @@ provider:
       Action:
         - dynamodb:*
       Resource: "arn:aws:dynamodb:us-east-1:978687357621:table/stocks"
-
+    - Effect: "Allow"
+      Action: 'sqs:*'
+      Resource: "arn:aws:sqs:us-east-1:978687357621:aws-shop-catalog-items-queue"
+    - Effect: "Allow"
+      Action: 'sns:*'
+      Resource: "arn:aws:sns:us-east-1:978687357621:aws-shop-sns-create-product-topic"
 
 plugins:
   - serverless-auto-swagger
@@ -76,6 +84,12 @@ functions:
       - httpApi:
           path: /products
           method: get
+  catalogBatchProcess:
+    handler: handlers/catalogBatchProcess.catalogBatchProcess
+    events:
+      - sqs:
+          arn: "arn:aws:sqs:us-east-1:978687357621:aws-shop-catalog-items-queue"
+          batchSize: 5
   getProductsById:
     handler: handlers/getProductsById.getProductsById
     events:
@@ -130,6 +144,16 @@ functions:
 
 resources: # CloudFormation template syntax from here on.
   Resources:
+    createProductTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        TopicName: aws-shop-sns-create-product-topic
+    createProductTopicGeneralEmailSubscription:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Endpoint: ${env:FEED_EMAIL}
+        Protocol: "email"
+        TopicArn: "arn:aws:sns:us-east-1:978687357621:aws-shop-sns-create-product-topic"
     products:
       Type: AWS::DynamoDB::Table
       Properties:
