--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -16,6 +16,12 @@ provider:
   environment:
     SQS_URL:
       Ref: catalogItemsQueue
+  httpApi:
+    cors: true
+    authorizers:
+      customAuthorizer:
+        type: request
+        functionArn: "arn:aws:lambda:us-east-1:978687357621:function:authorization-service-dev1-basicAuthorizer"
   iam:
     role:
       statements:
@@ -43,6 +49,30 @@ custom:
     includeModules: true
   autoswagger:
     typefiles: []
+
+functions:
+  importProductsFile:
+    handler: handlers/importProductsFile.importProductsFile
+    events:
+      - httpApi:
+          path: /import
+          method: get
+          cors: true
+          request:
+            parameters:
+              querystrings:
+                name: true
+          authorizer:
+            name: customAuthorizer
+  importFileParser:
+    handler: handlers/importFileParser.importFileParser
+    events:
+      - s3:
+          event: 's3:ObjectCreated:*'
+          bucket: 'aws-shop-csv-storage'
+          existing: true
+          rules:
+            - prefix: 'uploaded/'
 
 resources:
   Resources:
@@ -84,27 +114,6 @@ resources:
 #    - include-me.js
 #    - include-me-dir/**
 
-functions:
-  importProductsFile:
-    handler: handlers/importProductsFile.importProductsFile
-    events:
-      - httpApi:
-          path: /import
-          method: get
-          cors: true
-          request:
-            parameters:
-              querystrings:
-                name: true
-  importFileParser:
-    handler: handlers/importFileParser.importFileParser
-    events:
-      - s3:
-          event: 's3:ObjectCreated:*'
-          bucket: 'aws-shop-csv-storage'
-          existing: true
-          rules:
-            - prefix: 'uploaded/'
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
